--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,199 @@
-body{
-	font-size:16px;
-	font-weight:bold;
-	font-family:'Roboto';
+body * {
+	background-color: rgba(0, 191, 255, .1);
 }
-h1{
-	font-size:35px;
-	font-weight:bold;
-	font-family:'Roboto';
-	line-height:30px;
+body {
+	font-size: 16px;
+	font-weight: bold;
+	font-family: 'Roboto';
+	margin: 0;
+	padding: 0;
 }
-h2{
-	font-size:35px;
-	font-weight:bold;
-	font-family:'Roboto';
+h1 {
+	font-size: 35px;
+	font-weight: bold;
+	font-family: 'Roboto';
+	line-height: 30px;
+	float: left;
+}
+h2 {
+	font-size: 35px;
+	font-weight: bold;
+	font-family: 'Roboto';
+}
+h3 {
+	font-size: 24px;
+}
+h4 {
+	font-size: 14px;
+}
+.clearfix::after {
+	content: "";
+	display: table;
+	clear: both;
+}
+.header_container {
+	width: 1146px;
+	margin: 0 auto;
+}
+.right_item_container {
+	width: 267px;
+	float: right;
+	margin-top: 23px;
+}
+.right_item {
+	width: 267px;
+	margin-bottom: 10px;
+	float: right;
+}
+.graph_phone {
+	width: 170px;
+	padding: 0 10px;
+	float: right;
+}
+.logo {
+	width: 154px;
+	height: 64px;
+	float: left;
+	margin-right: 30px;
+	margin-top: 10px;
+}
+.main_navigation {
+	width: 360px;
+	float: left;
+	margin-top: 30px;
+}
+.container {
+	width: 1146px;
+	margin: 0 auto;
+}
+.main_slide {
+	min-height: 584px;
+	margin-top: -34px;
+}
+.slide {
+	padding-top: 315px;
+	padding-bottom: 144px;
+}
+.text_slide {
+	width: 670px;
+	margin: 0 auto;
+}
+.button_slide {
+	width: 280px;
+	margin: 0 auto;
+}
+.free_container {
+	margin-bottom: 40px;
+}
+.raspberry {
+	float: left;
+	width: 560px;
+}
+.chocolate {
+	float: right;
+	width: 560px;
+}
+.catalog_container {
+	margin-bottom: 40px;
+	font-size: 0px;
+  
+}
+.catalog_item {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 16px;
+	width: 267px;
+	margin-right: 26px;  
+}
+.catalog_item:nth-child(4n) {
+	margin-right: 0; 
+}
+.about_company {
+	margin-bottom: 40px;
+	font-size: 0px;
+}
+.block_info {
+	display: inline-block;
+	width: 560px;
+	margin-right: 26px;
+	font-size: 16px;
+}
+.block_info:nth-child(2n+1) {
+	margin-right: 0;
+}
+.news_delivery {
+ 	margin-bottom: 40px;
+}
+.news {
+	float: left;
+	width: 560px;
+}
+.delivery {
+	float: right;
+	width: 560px;
+}
+.index_content_right {
+	float: right;
+}
+.main_footer {
+	margin-top: 18px;
+	padding: 16px 0;
+}
+.footer_social {
+	float: left;
+	margin-right: 212px;
+	width: 186px;
+}
+.footer_center {
+	float: left;
+	width: 328px;
+	margin-right: 230px;
+}
+.footer_logo {
+	float: right;
+	width: 190px;
+}
+.breadcrumbs {
+	float: left;
+	width: 220px;
+	margin-right:633px;
+}
+.pagination {
+	float: right;
+	width: 190px;
+}
+.container_filter {
+	width: 853px;
+	margin-bottom: 40px;
+}
+.filter {
+	font-size: 0px;
+}
+.block_sorting {
+	float: left;
+	width: 853px;
+}
+.sorting {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 14px;
+	width: 193px;
+	margin-right: 14px;
+}
+.range_filter {
+	display: inline-block;
+	vertical-align: top;
+	width: 218px;
+	margin-right:14px;
+}
+.block_fatness {
+	display: inline-block;
+	vertical-align: top;
+	width: 414px;
+}
+.block_filler {
+	display: inline-block;
+	vertical-align: top;
+	width: 702px;
+	margin-top: 20px;
 }
