--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,48 @@
 body * {
-	background-color: rgba(0, 191, 255, .1);
+	background-color: rgba(0, 0, 0, .05);
+}
+html {
+	box-sizing: border-box;
+}
+*, *::before, *::after {
+	box-sizing: inherit;
 }
 body {
 	font-size: 16px;
 	font-weight: bold;
-	font-family: 'Roboto';
+	font-family: "Roboto", "Arial", sans-serif;
 	margin: 0;
 	padding: 0;
 }
 h1 {
 	font-size: 35px;
 	font-weight: bold;
-	font-family: 'Roboto';
+	font-family: "Roboto", "Arial", sans-serif;
 	line-height: 30px;
 	float: left;
 }
 h2 {
 	font-size: 35px;
 	font-weight: bold;
-	font-family: 'Roboto';
+	font-family: "Roboto", "Arial", sans-serif;
 }
 h3 {
 	font-size: 24px;
+	font-weight: bold;
+	font-family: "Roboto", "Arial", sans-serif;
 }
 h4 {
 	font-size: 14px;
+	font-weight: bold;
+	font-family: "Roboto", "Arial", sans-serif;
+}
+.wrapper {
+	min-width: 900px;
 }
 .clearfix::after {
 	content: "";
 	display: table;
 	clear: both;
-}
-.header_container {
-	width: 1146px;
-	margin: 0 auto;
 }
 .right_item_container {
 	width: 267px;
@@ -47,24 +56,28 @@ h4 {
 }
 .graph_phone {
 	width: 170px;
+	min-width: 200px;
 	padding: 0 10px;
 	float: right;
 }
 .logo {
-	width: 154px;
-	height: 64px;
 	float: left;
 	margin-right: 30px;
 	margin-top: 10px;
 }
 .main_navigation {
-	width: 360px;
+	width: 350px;
 	float: left;
 	margin-top: 30px;
 }
-.container {
-	width: 1146px;
+.main_header, .main_container, .main_footer {
+	min-width: 900px;
+	max-width: 1200px;
 	margin: 0 auto;
+	padding: 0 2.3%;
+}
+.container {
+	width: 100%;
 }
 .main_slide {
 	min-height: 584px;
@@ -72,38 +85,57 @@ h4 {
 }
 .slide {
 	padding-top: 315px;
-	padding-bottom: 144px;
+	min-height: 249px;
 }
 .text_slide {
-	width: 670px;
+	width: 55.8%;
 	margin: 0 auto;
 }
 .button_slide {
 	width: 280px;
 	margin: 0 auto;
 }
+
+.violet_2 {
+	display: none;
+}
+.brown_3 {
+	display: none;
+}
 .free_container {
 	margin-bottom: 40px;
+	font-size: 0;
+	padding: 0 20px;  
+}
+.block_free {
+	display: inline-block;
+	vertical-align: top;
+	width: 48.8%;
+	margin-right: 2.2%;
+}
+.block_free:nth-child(2n) {
+	margin-right: 0;
 }
 .raspberry {
-	float: left;
-	width: 560px;
+	padding-right: 20px;
 }
 .chocolate {
-	float: right;
-	width: 560px;
+	padding-left: 20px;
+}
+.block_free p{
+	font-weight: bold;
+	font-size: 18px;
 }
 .catalog_container {
 	margin-bottom: 40px;
 	font-size: 0px;
-  
 }
 .catalog_item {
 	display: inline-block;
 	vertical-align: top;
 	font-size: 16px;
-	width: 267px;
-	margin-right: 26px;  
+	width: 23.3%;
+	margin-right: 2.2%;
 }
 .catalog_item:nth-child(4n) {
 	margin-right: 0; 
@@ -111,47 +143,67 @@ h4 {
 .about_company {
 	margin-bottom: 40px;
 	font-size: 0px;
+	padding: 0 20px;
 }
 .block_info {
 	display: inline-block;
-	width: 560px;
-	margin-right: 26px;
+	vertical-align: top;
+	width: 47%;
+	margin-right: 6%;
 	font-size: 16px;
 }
 .block_info:nth-child(2n+1) {
 	margin-right: 0;
 }
+p {
+  font-weight: normal;
+}
 .news_delivery {
  	margin-bottom: 40px;
+	font-size: 0;
+	padding: 0 20px;
 }
-.news {
-	float: left;
-	width: 560px;
+.block_n_d {
+	display: inline-block;
+	vertical-align: top;
+	width: 48.8%;
+	margin-right: 2.2%;
+	font-size: 16px;
+}
+.block_n_d:nth-child(2n) {
+	margin-right: 0;
 }
 .delivery {
-	float: right;
-	width: 560px;
+	padding-left: 27px;
 }
-.index_content_right {
-	float: right;
+.map_container {
+	position: relative;
+	margin-top: -430 px;
+}
+.container_contacts {
+	position: absolute;
+	right: 2.3%;
+	top: 50%;
+	transform: translateY(-50%);
+	max-height: 350px;
 }
 .main_footer {
-	margin-top: 18px;
-	padding: 16px 0;
+	margin-top: 20px; 
 }
 .footer_social {
 	float: left;
-	margin-right: 212px;
+	margin-right: 214px;
 	width: 186px;
+	margin-top:15px;
 }
 .footer_center {
 	float: left;
-	width: 328px;
-	margin-right: 230px;
+	width: 304px;
+	margin-top: 15px;
 }
 .footer_logo {
 	float: right;
-	width: 190px;
+	width: 189px;
 }
 .breadcrumbs {
 	float: left;
@@ -196,4 +248,12 @@ h4 {
 	vertical-align: top;
 	width: 702px;
 	margin-top: 20px;
+}
+.btn {
+	font-size: 18px;
+}
+img {
+	max-width:100%;
+	height: auto;
+	display: block;
 }
