--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,13 @@ html {
 }
 body {
 	font-size: 16px;
+	line-height: 22px;
 	font-weight: bold;
 	font-family: 'Roboto', 'Arial', sans-serif;
 	margin: 0;
 	padding: 0;
 	background-color: #849d8f;
+	color: #ffffff;
 
 }
 body > input[type="radio"] {
@@ -25,22 +27,16 @@ h1 {
 	float: left;
 }
 h2 {
-	font-size: 35px;
-	font-weight: bold;
-	font-family: 'Roboto', 'Arial', sans-serif;
+	font-size: 35px;	
 }
 h3 {
 	font-size: 24px;
-	font-weight: bold;
-	font-family: 'Roboto', 'Arial', sans-serif;
+	line-height: 30px;
 }
 h4 {
 	font-size: 14px;
-	font-weight: bold;
-	font-family: 'Roboto', 'Arial', sans-serif;
 }
 .wrapper {
-	min-width: 940px;
 	background-repeat: no-repeat;
 	background-position: top center;
 	transition: background-image 0.5s ease, background-color 0.5s ease;
@@ -65,7 +61,6 @@ h4 {
 	min-width: 900px;
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 0 2.3%;
 }
 .clearfix::after {
 	content: "";
@@ -164,10 +159,11 @@ h4 {
 	line-height: 16px;
 	border-radius: 16px;
 }
-
 .container {
-	width: 100%;
+	padding: 0 2.3%;
+	margin: 0 auto;
 }
+
 .slider {
 	position: relative;
 
@@ -183,7 +179,7 @@ h4 {
 	width: 700px;
 	margin: 0 auto;
 	margin-bottom: 30px;
-
+	line-height: 60px;
 	font-weight: 800;
 	font-size: 60px;
 }
@@ -265,7 +261,8 @@ h4 {
 .free_container {
 	margin: 40px 0;
 	font-size: 0;
-	padding: 0 ;
+	padding: 0;
+
 }
 .block_free {
 	display: inline-block;
@@ -275,24 +272,23 @@ h4 {
 	border-radius: 10px;
 	min-height: 230px;
 	font-size: 0;
+	background-repeat: no-repeat;
+	padding: 0 20px 80px;
+	background-position: center center;
+    background-size: cover;
+
 }
 .block_free h2 {
-	
-	margin-top: 12px;
-	margin-bottom: px;
+	margin-bottom: 20px;
 }
 .block_free p {
-	display: inline-block;
-	vertical-align: top;
-	font-weight: bold;
 	font-size: 18px;
-	
-	margin-bottom: ;
 }
 .block_free:nth-child(2n) {
 	margin-right: 0;
 }
 .raspberry_free {
+	padding-bottom: ;
 	background-image: url("../img/crimson_background.png");
 	color: #ffffff;
 }
@@ -300,18 +296,9 @@ h4 {
 	background-image: url("../img/chocolate_background.png");
 	color: #ffffff;
 }
-.raspberry {
-	padding-left: 20px;
-	padding-right: 10px;
-}
-.chocolate {
-	padding-left: 20px;
-	padding-right: 10px;
-}
 .btn {
-	 display: inline-block;
+	display: inline-block;
 	font-weight: 600;
-
 	vertical-align: top;
 	color: #ffffff;
 	text-decoration: none;
@@ -325,7 +312,7 @@ h4 {
 	box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
 }
 .btn:hover {
-	  background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+	background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
 	background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
 	background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
 	box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
@@ -337,7 +324,9 @@ h4 {
 	box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 }
 .block_free .btn {
+	position: absolute;
 	padding: 5px 24px;
+
 	margin: ;
 	font-size: 18px;
 	line-height: 36px;
@@ -372,7 +361,6 @@ h4 {
 	font-weight: 600;
 	color: #ffffff;
 }
-
 .catalog_title {
 	display: inline-block;
 	vertical-align: top;
@@ -387,26 +375,27 @@ h4 {
 	line-height: 24px;
 }
 .about_company {
+	display: inline-block;
 	margin-bottom: 40px;
 	font-size: 0;
 	padding: 0 20px;
 	color: #323232;
 	background-image: url("../img/background_SEO.png");
 	border-radius: 10px;
-
+	min-height: 306px;
 }
 .block_info {
 	display: inline-block;
 	vertical-align: top;
 	width: 48.8%;
 	margin-right: 2.2%;
-	
-	padding-left: 50px;
+	padding-left: 57px;
+
 }
 .block_info:nth-child(2n+1) {
 	margin-right: 0;
 }
-p {
+.block_info p {
 	font-weight: normal;
 	font-size: 16px;
 	line-height: 22px;
@@ -414,7 +403,7 @@ p {
 .news_delivery {
 	margin-bottom: 40px;
 	font-size: 0;
-	padding: 0 ;
+	padding: 0;
 }
 .block_n_d {
 	display: inline-block;
@@ -424,9 +413,15 @@ p {
 	border-radius: 10px;
 	min-height: 220px;
 	font-size: 0;
+	background-repeat: no-repeat;
+	padding: 0 20px;
 }
 .block_n_d:nth-child(2n) {
 	margin-right: 0;
+}
+.news_text, .delivery_text{
+	font-weight: normal;
+	color: #5a5a5a;
 }
 .news {
 	color: #353535;
@@ -438,15 +433,13 @@ p {
 	color: #353535;
 	display: inline-block;
 	font-size: 24px;
+	width: 295px;
 }
 .delivery {
 	display: inline-block;
 	font-size: 16px;
 	background-image: url("../img/the_mail_background.png");
-}
-.delivery_text {
-	padding-left: 27px;
-
+	padding-left: 26px;
 }
 .block_n_d .btn {
 
@@ -482,6 +475,34 @@ p {
 	float: left;
 	min-width: 186px;
 	margin-top: 15px;
+}
+.social_btn {
+	display: inline-block;
+	width: 38px;
+	height: 38px;
+	border: 3px solid rgba(255,255,255, 0.2);
+	opacity: 0.2;
+	margin-right: 12px;
+	border-radius: 50%;
+	vertical-align: middle;
+	background-image: url("../img/social.png");
+	background-repeat:  no-repeat;
+}
+.social_btn_tw {
+	background-position: -37px 0px;
+	opacity: 0.8;
+}
+.social_btn_ig {
+	background-position: 0px 0px;
+	opacity: 0.8;
+}
+.social_btn_fb {
+	background-position: -112px 0px;
+	opacity: 0.8;
+}
+.social_btn_vk {
+	background-position: -75px 0px;
+	opacity: 0.8;
 }
 .footer_center {
 	display: inline-block;
