--- a/css/style.css
+++ b/css/style.css
@@ -52,12 +52,6 @@ h3 {
 	background-image: url("../img/ice_cream3.png");
 }
 
-.content {
-	min-width: 900px;
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 0;
-}
 .clearfix::after {
 	content: "";
 	display: table;
@@ -67,12 +61,12 @@ h3 {
 	width: 267px;
 	float: right;
 	margin-top: 23px;
-	font-size: 0;
+	font-size: 0px;
 }
 .right_item {
-	min-width: 267px;
+	min-width: 260px;
 	margin-bottom:;
-	display: inline-block;
+	float: right;
 	font-size: 0px;
 }
 .search_block {
@@ -107,6 +101,8 @@ h3 {
 	border-radius: 5px;
 	background: #f8f7f4;
 	z-index: 10;
+	box-shadow: 
+				0 20px 20px 0 rgba(0,0,0,0.4);
 }
 .form_search input[type="text"] {
   width: 100%;
@@ -184,6 +180,8 @@ h3 {
 	display: none;
 	border-radius: 5px;
 	background: #f8f7f4;
+	box-shadow: 
+				0 20px 20px 0 rgba(0,0,0,0.4);
  
 }
 
@@ -285,6 +283,7 @@ h3 {
 	line-height: 14px;
 	margin-left: 10px;
 	position: relative;
+	padding-bottom: 4px;
 }
 .basket_block a {
 	display: block;
@@ -314,6 +313,73 @@ h3 {
 	background-repeat: no-repeat;
 	background-position:  -109px -53px; 
 } 
+.form_basket{
+	position: absolute;
+	top: 100%;
+	right: 0;
+	z-index: 10;
+	/*display: none;*/
+	min-width: 510px;
+	padding: 20px 15px;
+	border-radius: 5px;
+	font-size: 13px;
+	font-weight: 400;
+
+	color: #333333;
+	background: #f8f7f4;
+	box-shadow: 	
+				0 20px 20px rgba(0,0,0,0.4);
+}
+.basket_block:hover .form_basket{
+	display: block;
+}
+.close_basket {
+	
+	position: absolute;
+	top: 15px;
+	right: 15px;
+
+	width: 12px;
+	height: 12px;
+
+	font-size: 0;
+
+	background-color: red;
+	border: 0;
+	outline: 0;
+	cursor: pointer;
+	position: relative;
+}
+.close_basket::before,
+.close_basket::after {
+	content: "";
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 14px;
+	height: 1px;
+	background-color: #000000;
+	border-radius: 1px;
+}
+.close_basket::before {
+	transform: rotate(45deg);
+}
+
+.close_basket::after {
+	transform: rotate(-45deg);
+}
+.form_product_1 {
+	font-size: 0;
+}
+.line_1 p {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 13px;
+	margin-left: 30px;
+}
+.line_1 p:first-child {
+	margin-left: 76px;
+}
 .search a, .login a, .basket a {
 	opacity: 1;
 }
@@ -325,9 +391,10 @@ h3 {
 
 .graph_phone {
 	min-width: 200px;
-	padding: 20px 10px 0 10px;
+	padding: 20px 0 0 10px;
 	color: #ffffff;	
 	font-size: 0;
+	float: right;
 }
 .graph {
 	float: right;
@@ -350,7 +417,7 @@ h3 {
 	min-width: 150px;
 	margin-right: 30px;
 	position: relative;
-	top: 15px;
+	top: 10px;
 	left: -6px;
 }
 .navigation {
@@ -399,7 +466,11 @@ h3 {
 	box-shadow: 
 				inset 0 2px 2px 1px #888888;
 }
-.list {
+li:hover .catalog_list {
+	display: block;
+}
+
+.navigation .catalog_list {
 	position: absolute;
 	z-index: 10;
 	top: 100%;
@@ -407,53 +478,62 @@ h3 {
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	background: #f8f7f4;
+	display: none;
 	border-radius: 7px;
-	min-height:171px;
-	display: none;	
+	
+	box-shadow: 
+				0 20px 20px 0 rgba(0,0,0,0.4);	
 }
-.list li {
-	width: 143px;
-	padding: 0px;
+.catalog_list li {
+	width: 144px;
+	background: #f8f7f4;
+	padding: 10px 0;
+	padding-left: 20px;
+	display: inline-block;
 }
-.list a {
+.catalog_list a {
 	color: #343434;
 	font-size: 14px;
 	font-weight: 400;
-	padding: 7px 20px;
-	margin: 5px 0; 
-	border-radius: 0px;
-	/*box-shadow: 
-				inset 0 20px 10px 20px rgba(0,0,0,0.4);неправильно*/
-}
-
-li:hover .list {
 	display: block;
+	margin: 0; 
+	border-radius: 0px;
+	padding: 0;
+}
+.catalog_list li:hover, .catalog_list a:hover{
+	overflow: inherit;
+	background: #fbded7;
+}
+.catalog_list li:active, .catalog_list a:active {
+	background-color: #f6b5a5;
+	box-shadow: none;
+}
+a.bdr {
+	font-weight: 700;
 }
 .bdr:after {
 	content: "";
 	position: absolute;
 	height: 1px;
-	top: 38px;
+	top: 35px;
 	left: 6px;
 	right: 9px;
 	background-color: rgba(53,53,53,0.2); 
-	padding: 0;
-	
+	padding: 0;	
+}
+.catalog_list li:last-child {
+  border-radius: 0 0 7px 7px;
 }
 
-.list a:hover {
-	background-color: #fbded7;
-
+.catalog_list li:first-child {
+  border-radius: 7px 7px 0 0;
 }
-.list a:active {
-	background-color: #f6b5a5;
-	box-shadow: none;
 
-}
 .container {
 	padding: 0 2.25%;
 	margin: 0 auto;
+	min-width: 900px;
+	max-width: 1200px;
 }
 
 .slider {
@@ -516,8 +596,8 @@ li:hover .list {
 }
 .slider_controls label {
 	display: inline-block;
-	width: 17px;
-	height: 17px;
+	width: 18px;
+	height: 18px;
 	margin-right: 8px;
 
 	vertical-align: top;
@@ -526,6 +606,9 @@ li:hover .list {
 	border: 2px solid #ffffff;
 	border-radius: 50%;
 	cursor: pointer;
+}
+.slider_controls label:hover{
+	background-color: rgba(255,255,255,0.4);
 }
 #green_1:checked ~ .wrapper #slide_green_1,
 #violet_2:checked ~ .wrapper #slide_violet_2,
@@ -769,6 +852,9 @@ li:hover .list {
 .block_info:nth-child(2n+1) {
 	margin-right: 0;
 }
+
+
+
 .news_delivery {
 	margin-bottom: 40px;
 	font-size: 0;
@@ -793,16 +879,19 @@ li:hover .list {
 	font-weight: 400;
 	color: #5a5a5a;
 	margin: 0;
-	padding-top: 24px;
+	padding-top: 22px;
 	padding-bottom: 15px;
 } 
 .delivery_text {
 	font-weight: 400;
 	color: #5a5a5a;
 	margin: 0;
-	padding-top: 35px;
-	padding-bottom: 40px;
+	padding-top: 10px;
+	padding-bottom: 35px;
+	font-size: 16px;
+	line-height: 22px;
 }
+
 .news {
 	color: #353535;
 	display: inline-block;
@@ -811,17 +900,23 @@ li:hover .list {
 }
 .news a {
 	color: #353535;
-	display: inline-block;
+	display:block;
 	font-size: 24px;
 	width: 295px;
-	text-decoration: none;
+	
 	position: relative;
+
+	/*text-decoration: none;
+	border-bottom: 2px solid #353535;*/
 }
 .news a:hover {
 	color: #ec593c;
 
 }
-/*.news a:after {
+/*.link_news{
+	border-bottom: 2px solid #353535;
+}
+.news a:after {
 	content: "";
 	position: absolute;
 	height: 2px;
@@ -832,19 +927,43 @@ li:hover .list {
 }*/
 .delivery {
 	display: inline-block;
-	font-size: 16px;
-	background: url("../img/the_mail_background.png") no-repeat 100% 100%;
-	padding-left: 26px;
+	width: 48.8%;
+	border-radius: 10px;
+	min-height: 220px;
+	padding: 5px 5px;
 	
+	padding-left: 26px;
+	background-image: repeating-linear-gradient(
+	-45deg,
+	#f8f7f4 0px,
+	#f8f7f4 5px,
+	#92cdff 5px,
+	#92cdff 10px,
+	#f8f7f4 10px,
+	#f8f7f4 15px,
+	#fe9e90 15px,
+	#fe9e90 20px
+	);
 }
-.block_n_d .btn {
+.delivery_block {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  bottom: 5px;
+  left: 5px;
+  padding: 20px 20px;
+  border-radius: 10px;
+  background: #f8f7f4;
+  color: #5a5a5a;
+}
+.email_block .btn {
 	padding: 10px 20px;
 	font-size: 17px;
 	line-height: 24px;
 	border: none;
 	position: absolute;
-	right: 25px;
-	bottom: 41px;
+	right: -141px;
+	top: -1px;
 	display: block;
 }
 .email_block input[type="text"] {
@@ -860,10 +979,14 @@ li:hover .list {
 	
 }
 .email_block {
-	margin-right: 166px;
+	margin-right: 145px;
+	position: relative;
+	
 }
+
+
 .modal_content {
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	display: none;
@@ -875,6 +998,7 @@ li:hover .list {
 
 	background: #f8f7f4;
 	border-radius: 10px;
+	z-index: 50;
 }
 .modal_content_close {
 	
@@ -974,24 +1098,28 @@ li:hover .list {
 	background: rgba(0, 0, 0, 0.3);
 }
 
-.modal_overlay_show {
+/*.modal_overlay_show {
+	display: block;
+}*/
+.map_block {
+	
 	display: block;
 }
-
 
 .map_wrapper {
 	position: relative;
+	overflow: visible;
 
 }
 .map_container {
-	position: absolute;
-	display: block;
+	position: relative;;
 	right: 2.3%;
-	top: 65px;
+	float: right;
+	z-index: 10;
 	
 	width: 300px;
-	max-height: 350px;
-	
+	min-height: 305px;
+	margin: 65px 0 60px; 
 	padding: 30px 25px;
 	background-color: #ffffff;
 	color: #343434;
@@ -1018,7 +1146,17 @@ li:hover .list {
 	font-size: 17px;
 	line-height: 24px;
 }
+.map {
+	
+    position: absolute;
+    bottom: 0;
+    overflow: visible;
+    width: 100%;
+    height: 430px;
+    margin: 0 auto;
+    text-align: center;
 
+}
 .main_footer {
 	margin-top: 20px;
 	min-height: 85px;
@@ -1174,7 +1312,7 @@ li:hover .list {
     background: #d07058;
     color: #ffffff;
 }
-.list .active_list {
+.catalog_list .active_list {
     background: #d07058;
 }
 .block_breadcrumbs {
@@ -1215,18 +1353,13 @@ li:hover .list {
 	background-color: rgba(249,172,159,0.3);
 }
 
-.breadcrumbs a:after {
-	content: "";
+.breadcrumbs li:not(:last-child):after {
+	content: ">>";
 	position: absolute;
-	top: 0;
-	right: -16px;
-	height: 1px;
-	color: #ffffff;
-													/*&#187; правоя двойная стрелочка*/
+	top: -2px;
+	right: 5px;
+	transform: scale(0.5, 1);
 }
-/*.breadcrumbs .current {
-  color: #aba9a7;
-} 							текущая страницца*/
 
 .container_filter {
 	margin-bottom: 40px;
@@ -1430,11 +1563,13 @@ li:hover .list {
 	box-shadow: inset 0 0 0 2px #fbfcfb;
 }
 .button .btn_button:hover {
-	background-color: rgba(251,252,251);
+	background-color: rgb(251,252,251);
 	color: #363636;
 }
 .button .btn_button:active {
-	
+	background-color: #eaeaea;
+	color: #363636;
+	box-shadow: inset 0 2px 2px 1px #696969;
 }
 .pagination {
 	float: right;
