--- a/css/style.css
+++ b/css/style.css
@@ -102,13 +102,13 @@ h3 {
 				0 20px 20px 0 rgba(0,0,0,0.4);
 }
 .form_search input[type="text"] {
-  width: 100%;
-  padding: 6px 10px;
-  border: 1px solid #d3d3d2;
-  border-radius: 5px;
-  color: #999999;
-  font-weight: 400;
-  line-height: 24px;
+	width: 100%;
+	padding: 6px 10px;
+	border: 1px solid #d3d3d2;
+	border-radius: 5px;
+	color: #999999;
+	font-weight: 400;
+	line-height: 24px;
 }
 .search_block:hover .form_search{
 	display: block;
@@ -128,7 +128,7 @@ h3 {
 	background-image: url("../img/mini_img_all.png"); 
 	background-repeat: no-repeat;
 	background-position:  -109px -7px;  /*при наведении*/
-} 
+}
 .user_block {
 	display: inline-block;
 	vertical-align:top;
@@ -168,7 +168,7 @@ h3 {
 	background-image: url("../img/mini_img_all.png"); 
 	background-repeat: no-repeat;
 	background-position:  -109px -29px;
-} 
+}
 .form_login {
 	position: absolute;
 	top: 100%;
@@ -179,30 +179,30 @@ h3 {
 	background: #f8f7f4;
 	box-shadow: 
 				0 20px 20px 0 rgba(0,0,0,0.4);
- 
+
 }
 
 .form_login input[type="text"] {
-  width: 100%;
-  padding: 6px 15px;
-  border: 1px solid #d3d3d2;
-  border-radius: 5px;
-  color: #999999;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  margin-bottom: 10px;
+	width: 100%;
+	padding: 6px 15px;
+	border: 1px solid #d3d3d2;
+	border-radius: 5px;
+	color: #999999;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 24px;
+	margin-bottom: 10px;
 }
 .form_login input[type="password"] {
 	width: 100%;
-  padding: 6px 15px;
-  border: 1px solid #d3d3d2;
-  border-radius: 5px;
-  color: #999999;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  margin-bottom: 15px;
+	padding: 6px 15px;
+	border: 1px solid #d3d3d2;
+	border-radius: 5px;
+	color: #999999;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 24px;
+	margin-bottom: 15px;
 }
 .user_block:hover .form_login{
 	display: block;
@@ -223,7 +223,7 @@ h3 {
 	display: block;
 	width: 102px;
 	
-} 
+}
 .links {
 	width: 120px;
 	display: inline-block;
@@ -356,10 +356,10 @@ table {
 	padding-right: 14px
 }
 .form_table td:nth-of-type(3) {
-   width: 245px; 
+	width: 245px; 
 }
 .form_table td:nth-of-type(4) {
-    width: 122px;
+	width: 122px;
 }
 .form_table td:nth-of-type(5) {
 	width: 68px;
@@ -485,7 +485,6 @@ table {
 	margin-right: 2px;
 	padding-bottom: 5px;
 	
-	
 }
 .navigation a:after {
 	content: "";
@@ -497,7 +496,7 @@ table {
 
 	background-color: rgba(255,255,255,0.4);
 }
-.navigation a {
+.navigation  a{
 	display: block;
 	color: #ffffff;
 	font-size: 16px;
@@ -506,7 +505,7 @@ table {
 	vertical-align: top;
 	padding: 8px 13px;
 	border-radius: 16px;
-
+	/*border-bottom: 1px solid red;*/
 }
 .navigation a:hover {
 	color: #333333;
@@ -564,7 +563,7 @@ li:hover .catalog_list {
 a.bdr {
 	font-weight: 700;
 }
-.bdr:after {
+a.bdr:after {
 	content: "";
 	position: absolute;
 	height: 1px;
@@ -574,12 +573,13 @@ a.bdr {
 	background-color: rgba(53,53,53,0.2); 
 	padding: 0;	
 }
+
 .catalog_list li:last-child {
-  border-radius: 0 0 7px 7px;
+	border-radius: 0 0 7px 7px;
 }
 
 .catalog_list li:first-child {
-  border-radius: 7px 7px 0 0;
+	border-radius: 7px 7px 0 0;
 }
 
 .main_header, .main_container, .main_footer {
@@ -635,7 +635,7 @@ a.bdr {
 	background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
 	background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
 	box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
-} 
+}
 .btn_slide:active {
 	background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
 	background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
@@ -644,7 +644,7 @@ a.bdr {
 }
 .slider_controls {
 	position: absolute;
-	bottom: 25px;
+	bottom: 16px;
 	left: 0;
 	z-index: 20;
 
@@ -652,8 +652,8 @@ a.bdr {
 }
 .slider_controls label {
 	display: inline-block;
-	width: 18px;
-	height: 18px;
+	width: 20px;
+	height: 20px;
 	margin-right: 8px;
 
 	vertical-align: top;
@@ -708,8 +708,8 @@ a.bdr {
 	background-repeat: no-repeat;
 	padding: 0 20px 80px;
 	background-position: center center;
-    background-size: cover;
-    position: relative;
+	background-size: cover;
+	position: relative;
 }
 .block_free h2 {
 	margin-bottom: 20px;
@@ -1025,15 +1025,15 @@ a.bdr {
 	);
 }
 .delivery_block {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  bottom: 5px;
-  left: 5px;
-  padding: 20px 20px;
-  border-radius: 10px;
-  background: #f8f7f4;
-  color: #5a5a5a;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	bottom: 5px;
+	left: 5px;
+	padding: 20px 20px;
+	border-radius: 10px;
+	background: #f8f7f4;
+	color: #5a5a5a;
 }
 .email_block .btn {
 	padding: 10px 20px;
@@ -1047,7 +1047,6 @@ a.bdr {
 }
 .email_block input[type="text"] {
 	background-color: #ffffff;
-	border: 1px solid #d3d3d2;
 	border-radius: 5px;
 	font-size: 16px;
 	font-weight: 400;
@@ -1059,25 +1058,85 @@ a.bdr {
 }
 .email_block {
 	margin-right: 145px;
-	position: relative;
-	
+	position: relative;	
 }
+.subscription {
+	position: relative;
+}
+.email_field {
+	padding: 13px;
+	margin-right: 10px;
+	width: 100%;
+	border-radius: 5px;
+	border: none;
+	box-shadow: inset 0 0 0 1px #d3d3d2;
+}
+.email_field:hover {
+	box-shadow: inset 0 0 0 2px #d3d3d2;
+}
+.email_field:focus {
+	outline: none;
+	box-shadow: inset 0 0 0 2px #8fbdec;
+}
+.email_label {
+	font-size: 16px;
+	top: 11px;
+	left: 11px;
+}
+.email_label {
+	display: block;
+	position: absolute;
+	transition: top 0.7s ease, opacity 0.7s ease;
+	opacity: 0;
+	color: #999;
+}
+.email_field:valid + .email_label {
+	top: -20px;
+	opacity: 1;
+	font-size: 14px;
+	color: #9a9a9a;
+}
+.email_field:not(:placeholder-shown) + .email_label {
+	top: -20px;
+	opacity: 1;
+	font-size: 14px;
+	color: #9a9a9a;
+}
+.email_field:focus + .email_label {
+	top: -20px;
+	opacity: 1;
+	font-size: 14px;
+	color: #5b9ddf;
+}
+
+
+
+
+:focus::-webkit-input-placeholder {color: transparent}
+:focus::-moz-placeholder          {color: transparent}
+:focus:-moz-placeholder           {color: transparent}
+:focus:-ms-input-placeholder      {color: transparent}
+
+
+
 
 
 .modal_content {
 	position: fixed;
 	top: 50%;
 	left: 50%;
+	z-index: 50;
 	display: none;
 	width: 478px;
 	min-height: 442px;
 	padding: 20px 25px;
-
+	margin-top:-150px;
+	margin-left:-235px;
 	color: #343434;
 
 	background: #f8f7f4;
 	border-radius: 10px;
-	z-index: 50;
+	
 }
 .modal_content_close {
 	
@@ -1090,7 +1149,7 @@ a.bdr {
 
 	font-size: 0;
 
-	/*background-color: red;*/
+	background: #f8f7f4;
 	border: 0;
 	outline: 0;
 	cursor: pointer;
@@ -1116,10 +1175,13 @@ a.bdr {
 .modal_content h3 {
 	margin: 0;
 	margin-bottom: 20px;
-
-	line-height: 22px;
+	padding:0;
+	font-size:24px;
+	line-height:22px;
 }
-.feedback_form input[type="text"], .feedback_form textarea {
+.modal_content input[type="text"],
+.modal_content input[type="email"], 
+.modal_content textarea {
 	width: 265px;
 	margin: 0;
 	margin-bottom: 20px;
@@ -1136,24 +1198,49 @@ a.bdr {
 	outline: none;
 	border-radius: 5px
 }
-.feedback_form input:focus {
-	border: 2px solid #8fbdec;
-}
-.feedback_form input:hover {
-	border: 2px solid #c7c6c5;
+.modal_content input[type="text"]:focus,
+.modal_content input[type="email"]:focus,
+.modal_content textarea:focus,{
+	box-shadow:0 0 0 1px rgba(46,136,228,.51);
 }
 
-.feedback_form textarea {
+.modal_content input[type="text"]:hover,
+.modal_content input[type="email"]:hover,
+.modal_content textarea:hover {
+	box-shadow:0 0 0 1px #b2b2b2
+}
+.modal_content textarea {
 	width: 426px;
 	margin: 0 auto;
 	margin-bottom: 10px;
 
 }
-.feedback_form textarea:focus {
-	border: 2px solid #8fbdec;
+
+.modal_content input[type="email"]+label,
+.modal_content input[type="text"]+label,
+.modal_content textarea+label {
+	position:absolute;
+	top:-10px;
+	left:16px;
+	transition:top .7s ease,opacity .7s ease;
+	opacity:0;
+	font-size:13px;
+	font-weight:400;
+	color:#ccc
 }
-.feedback_form textarea:hover {
-	border: 2px solid #c7c6c5;
+.modal_content input[type="email"]:valid+label,
+.modal_content input[type="text"]:valid+label,
+.modal_content textarea:valid+label {
+	color:#2c8efe;
+	font-size:11px;
+	font-weight:400
+}
+.modal_content input[type="email"]:valid+label,
+.modal_content input[type="text"]:focus+label,
+.modal_content textarea:focus+label {
+	opacity:1;
+	top:-20px;
+	font-weight:400
 }
 .feedback_form .btn {
 	border: none;
@@ -1181,10 +1268,10 @@ a.bdr {
 	display: block;
 }
 
-.modal-content-show {
+.modal_content_show {
 	display:block;
 
-	}
+}
 .map_block {
 	
 	display: block;
@@ -1232,13 +1319,13 @@ a.bdr {
 }
 .map {
 	
-    position: absolute;
-    bottom: 0;
-    overflow: visible;
-    width: 100%;
-    height: 430px;
-    margin: 0 auto;
-    text-align: center;
+	position: absolute;
+	bottom: 0;
+	overflow: visible;
+	width: 100%;
+	height: 430px;
+	margin: 0 auto;
+	text-align: center;
 
 }
 .main_footer {
@@ -1400,16 +1487,16 @@ a.bdr {
 	font-size: 16px;
 }
 .navigation .active {
-    border-radius: 16px;
-    background: #d07058;
-    color: #ffffff;
-    border: none;
+	border-radius: 16px;
+	background: #d07058;
+	color: #ffffff;
+	border: none;
 }
 .active:after {
 	display: none;
 }
 .catalog_list .active_list {
-    background: #d07058;
+	background: #d07058;
 }
 .block_breadcrumbs {
 	margin-bottom: 5px;
@@ -1611,7 +1698,7 @@ a.bdr {
 	background-color: rgba(255,255,255,0.2);
 	border-radius: 18px;
 	padding: 7px 15px;
-} 
+}
 .container_fatness label {
 	font-size: 16px;
 	font-weight: 500;
@@ -1654,7 +1741,6 @@ a.bdr {
 	margin: 0;
 	padding: 0;
 	width: 702px;
-	/*margin-top: 20px;*/
 }
 .block_filler input[type="checkbox"] {
 	display: none;
@@ -1704,7 +1790,7 @@ a.bdr {
 	border: 2px solid #f8f7f4;
 	border-radius: 5px;
 	
-} 
+}
 .button {
 	float: left;
 	width: 144px;
@@ -1752,7 +1838,7 @@ a.bdr {
 .pagination li{
 	display: inline;
 	text-align: center;
-  }
+}
 .pagination a{
 	text-align: center;
 	vertical-align: middle;
@@ -1808,13 +1894,7 @@ a.bdr {
  .disabled {
 	opacity: 0.2;
 }
-/*.pagination{
-  list-style: none;
-  display: inline-block;
-  
-  margin-top: 10px;
- 
- */
+
 img {
 	max-width: 100%;
 	height: auto;
