--- a/css/style.css
+++ b/css/style.css
@@ -604,12 +604,12 @@ a.bdr:after {
 	background-color: rgba(53,53,53,0.2); 
 	padding: 0;	
 }
-/*.catalog_list a:first-child {
+.catalog_list a:first-child {
 	border-radius: 7px 7px 0 0;
 }
 .catalog_list a:last-child {
 	border-radius: 0 0 7px 7px;
-}*/
+}
 
 
 
